JDK 21: Basic settings + minor changes